2005-11-30  Per Bothner  <per@bothner.com>

	* scribble.scm: Test type inference/propagation by removing specifier.

2005-11-29  Per Bothner  <per@bothner.com>

	* mac-test.scm: Test new quasiquote extension.

2005-11-21  Per Bothner  <per@bothner.com>

	* classes2.scm (<TestCapture1>,  <TestCapture2>): New classes, to
	test capture of lambda in classes.
	* obj-test.scm: Do the test.

2005-11-18  Thomas Kirk <tk@research.att.com>
	    Per Bothner  <per@bothner.com>

	* mac-test.scm: Add test case from Savannah bug #14097
	(problem with (this) syntax within define-syntax).

2005-11-17  Per Bothner  <per@bothner.com>

	* classes1.scm <DateTest>: We must now use define-simple-class.

2005-10-24  Per Bothner  <per@bothner.com>

	* Makefile.am (check-num): Remove old dependency on testing.zip.

	* num-test.scm: Add tests using test-error and test-assert.

2005-10-06  Per Bothner  <per@bothner.com>

	* Makefile.am: Also search inherited $CLASSPATH - though last.

2005-10-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Add "." to CLASSPATH various places.

	* num-test.scm: Rewrite to use SRFI-64 "testing".
	* Makefile.am: Update accordingly.

2005-09-27  Per Bothner  <per@bothner.com>

	Add test for Savannah bug #14640 (internal compile error when
	using "location").
	* module1.scm (mod1-v5): Declare and export new variable.
	* module2.scm (mod2-v5); Access mod1-v5 using a location, only.
	* obj-test.scm: Check that mod2-v5 is correct.

2005-09-26  Per Bothner  <per@bothner.com>

	* gui-test.scm (testimage): Update read-image -> image-read.
	Use a publicly available image URL.

2005-08-03  Dean Ferreyra <dean@octw.com>

	* classes1.scm (datetest-ns, make-date-test): Move from here ...
	* classes2.scm: .. to here. This tests reference to class in
	imported module.

2005-08-03  Per Bothner  <per@bothner.com>

	* obj-test.scm: Test new (*:METHOD ...) syntax.

2005-07-27  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add moduleFT.scm.
